--- a/index.html
+++ b/index.html
@@ -54,7 +54,16 @@ const zagotovka =    " <form id='form'>\
         <select class=slt>\
         </select>\
     </form>";
+// типичный этап
 
+let segment = {     // объект
+    name: "Zig zag trapeziums",  // под ключом "name" хранится значение "John"
+    min_maxLanght: [10, 100],        // под ключом "age" хранится значение 30
+    complexity: 5, // сложность от 1 до 5
+    attractiveness: 5, // привлекательность от 1 до 5
+    price: 5,// цена за 1 метр
+    acceptableСolors: ['blue', 'grean']
+};
 
 // Список этапов
 let allTrack = ['Zig zag trapeziums', 'Rope bridge', 'Spaghetti bridge', 'Trapeziums', 'High ropes swing plates','Horizontal ladder', 'Net path', 'Barrels', 'Climbing planks','Horizontal net']
